# wasp_summur_shool_media_lang_2023

./: .gitignore  README.md  docker.sh  env.bat  env.sh  pyproject.toml  test.ipynb  trump_arty.json  zip_story.ipynb
big_bang_v2/: story.json
big_bang_v3/: big_bang.json
environment/: base-packages.sh  dockerfile.cpu  dockerfile.gpu
project/: story.json  test.ipynb
story/: __init__.py  __main__.py  big_bang.json  propmt.txt  story.json  utils.py  wasp_api.py
